chore: add search-ui module

--- a/package/PKGBUILD
+++ b/package/PKGBUILD
@@ -23,11 +23,13 @@ source=(
   "carbonio-files-ui::git+${url}/carbonio-files-ui-i18n"
   "carbonio-login-ui::git+${url}/carbonio-login-ui-i18n"
   "carbonio-mails-ui::git+${url}/carbonio-mails-ui-i18n"
+  "carbonio-search-ui::git+${url}/carbonio-search-ui-i18n"
   "carbonio-shell-ui::git+${url}/carbonio-shell-ui-i18n"
   "carbonio-tasks-ui::git+${url}/carbonio-tasks-ui-i18n"
   "carbonio-ws-collaboration-ui::git+${url}/carbonio-ws-collaboration-ui-i18n"
 )
 sha256sums=('SKIP'
+  'SKIP'
   'SKIP'
   'SKIP'
   'SKIP'
@@ -64,6 +66,8 @@ package() {
     -t "${pkgdir}/opt/zextras/web/iris/carbonio-files-ui/i18n"
   install -D carbonio-mails-ui/*.json \
     -t "${pkgdir}/opt/zextras/web/iris/carbonio-mails-ui/i18n"
+  install -D carbonio-search-ui/*.json \
+    -t "${pkgdir}/opt/zextras/web/iris/carbonio-search-ui/i18n"
   install -D carbonio-shell-ui/*.json \
     -t "${pkgdir}/opt/zextras/web/iris/carbonio-shell-ui/i18n"
   install -D carbonio-tasks-ui/*.json \
