--- a/package/PKGBUILD
+++ b/package/PKGBUILD
@@ -23,12 +23,13 @@ source=(
   "carbonio-login-ui::git+${url}/carbonio-login-ui-i18n"
   "carbonio-mails-ui::git+${url}/carbonio-mails-ui-i18n"
   "carbonio-search-ui::git+${url}/carbonio-search-ui-i18n"
-  "carbonio-storages-ui::git+${url}/carbonio-search-ui-i18n"
+  "carbonio-storages-ui::git+${url}/carbonio-storages-ui-i18n"
   "carbonio-shell-ui::git+${url}/carbonio-shell-ui-i18n"
   "carbonio-tasks-ui::git+${url}/carbonio-tasks-ui-i18n"
   "carbonio-ws-collaboration-ui::git+${url}/carbonio-ws-collaboration-ui-i18n"
 )
 sha256sums=(
+  'SKIP'
   'SKIP'
   'SKIP'
   'SKIP'
